# amz_backend

./: .dockerignore  .env  .gitignore  Dockerfile  amz.db  amz_script.py  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  routes.py  scrape_script.py
.github/workflows/: daily-cron.yml
middleware/: app_cors.py  rate_limiter.py
schemas/: price_history.py  products.py  tracking.py  users.py
utils/: current_time.py  email_alert.py  send_email.py  url_shortener.py
