[project]
name = "amz-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "playwright>=1.57.0",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.5",
    "pyshorteners>=1.0.1",
    "pytz>=2025.2",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
